--- a/views/layouts/profile.hbs
+++ b/views/layouts/profile.hbs
@@ -26,6 +26,9 @@
           Guest Dashboard
         {{/if}}
       </h3>
+      <a href="/search" >
+        <img src="/images/icons/compass.png" alt="My Courses Icon" class="icon"> Browse courses
+      </a>
       {{#if (eq sessionUser.role 'student')}}
         <a href="/student/dashboard" >
         <img src="/images/icons/home.png" alt="My Courses Icon" class="icon"> My Courses
