--- a/views/layouts/courseView.hbs
+++ b/views/layouts/courseView.hbs
@@ -54,6 +54,9 @@
         Guest Dashboard
         {{/if}}
       </h3>
+      <a href="/search" >
+        <img src="/images/icons/compass.png" alt="My Courses Icon" class="icon"> Browse courses
+      </a>
       <a
         href="{{#if sessionUser}}{{#if (eq sessionUser.role 'instructor')}}/instructor/dashboard{{else}}/student/dashboard{{/if}}{{/if}}">
         <img src="/images/icons/home.png" alt="My Courses Icon" class="icon"> My Courses
