--- a/views/layouts/enrollView.hbs
+++ b/views/layouts/enrollView.hbs
@@ -28,7 +28,9 @@
           Guest Dashboard
         {{/if}}
       </h3>
-
+      <a href="/search" >
+        <img src="/images/icons/compass.png" alt="My Courses Icon" class="icon"> Browse courses
+      </a>
       <a href="/my-courses">
         <img src="/images/icons/home.png" alt="My Courses Icon" class="icon"> My Courses
       </a>
